# src/main/java/com/cayo/ms/demo/model/Error.java
@@ -1,0 +1,156 @@
+package com.cayo.ms.demo.model;
+
+import java.net.URI;
+import java.util.Objects;
+import com.cayo.ms.demo.model.ErrorSource;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import org.openapitools.jackson.nullable.JsonNullable;
+import java.time.OffsetDateTime;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import io.swagger.v3.oas.annotations.media.Schema;
+
+
+import java.util.*;
+import jakarta.annotation.Generated;
+
+/**
+ * Error
+ */
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-07-27T19:35:00.570654233-04:00[America/New_York]")
+public class Error {
+
+  private String status;
+
+  private ErrorSource source;
+
+  private String title;
+
+  private String detail;
+
+  public Error status(String status) {
+    this.status = status;
+    return this;
+  }
+
+  /**
+   * Get status
+   * @return status
+  */
+  
+  @Schema(name = "status", example = "422", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("status")
+  public String getStatus() {
+    return status;
+  }
+
+  public void setStatus(String status) {
+    this.status = status;
+  }
+
+  public Error source(ErrorSource source) {
+    this.source = source;
+    return this;
+  }
+
+  /**
+   * Get source
+   * @return source
+  */
+  @Valid 
+  @Schema(name = "source", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("source")
+  public ErrorSource getSource() {
+    return source;
+  }
+
+  public void setSource(ErrorSource source) {
+    this.source = source;
+  }
+
+  public Error title(String title) {
+    this.title = title;
+    return this;
+  }
+
+  /**
+   * Get title
+   * @return title
+  */
+  
+  @Schema(name = "title", example = "Invalid Attribute", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("title")
+  public String getTitle() {
+    return title;
+  }
+
+  public void setTitle(String title) {
+    this.title = title;
+  }
+
+  public Error detail(String detail) {
+    this.detail = detail;
+    return this;
+  }
+
+  /**
+   * Get detail
+   * @return detail
+  */
+  
+  @Schema(name = "detail", example = "firstName cannot be blank", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("detail")
+  public String getDetail() {
+    return detail;
+  }
+
+  public void setDetail(String detail) {
+    this.detail = detail;
+  }
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    Error error = (Error) o;
+    return Objects.equals(this.status, error.status) &&
+        Objects.equals(this.source, error.source) &&
+        Objects.equals(this.title, error.title) &&
+        Objects.equals(this.detail, error.detail);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(status, source, title, detail);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class Error {\n");
+    sb.append("    status: ").append(toIndentedString(status)).append("\n");
+    sb.append("    source: ").append(toIndentedString(source)).append("\n");
+    sb.append("    title: ").append(toIndentedString(title)).append("\n");
+    sb.append("    detail: ").append(toIndentedString(detail)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
